[gd_scene load_steps=7 format=3 uid="uid://gowm55f5mqid"]

[ext_resource type="Script" path="res://Art/Mimic/mimic.gd" id="1_tkvxs"]
[ext_resource type="Texture2D" uid="uid://ccphmotdwymb0" path="res://Art/Mimic/mimic_true.png" id="1_uevc7"]

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minotaur:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v8wrg"]
radius = 17.6923
height = 60.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(0, -58)
scale = Vector2(2.6, 2.6)
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_tkvxs")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0.384615, 11.5385)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-0.384615, 30)
polygon = PackedVector2Array(0.384615, -3.8147e-06, -6.92308, -0.769238, -15, -5.76924, -18.4615, -11.9231, -22.6923, -8.46154, -16.1538, 9.23076, 0, 14.6154, 18.0769, 11.1538, 26.1538, -11.9231, 19.2308, -12.6923, 14.6154, -4.61539, 8.84616, -1.15385)

[node name="MimicTrue" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(0.384615, 6.53846)
scale = Vector2(1.3524, 1.3524)
texture = ExtResource("1_uevc7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(0.384615, 11.5385)
shape = SubResource("CapsuleShape2D_v8wrg")

[node name="Facade" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, 16.1538)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
